pingpong/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: pinglog
spec:
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: pyryl/pingpong@sha256:3736ad2ced0248c1977be993c473184421ca39b6260c2ad84497dc480ea60b52
