pingpong/manifests/postgres.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingpong-postgres-stset
  namespace: pinglog
spec:
  selector:
    matchLabels:
      app: pingpong-postgres
  serviceName: pingpong-postgres-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: pingpong-postgres
    spec:
      containers:
      - name: pingpong-postgres
        image: pyryl/pingpong-postgres@sha256:9d2060f107150cfa60e55bfdd29207545d9baf1e35bb9f87434919b535580077
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
        - name: postgres-data-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Mi

---

apiVersion: v1
kind: Service
metadata:
  name: pingpong-postgres-svc
  namespace: pinglog
spec:
  selector:
    app: pingpong-postgres
  ports:
  - port: 5432
    targetPort: 5432
