pingpong/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: pinglog
spec:
  selector:
    app: pingpong
  ports:
  - port: 1234
    protocol: TCP
    targetPort: 3000
