pingpong/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ing
  namespace: pinglog
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: '/pingpong'
        backend:
          service:
            name: pingpong-svc
            port:
              number: 1234
